tests/expected/semant06e.semant.err
semant06e.usc:16:6: error: Invalid redeclaration of identifier 'abc'
	int abc = 5;
	    ^
1 Error(s)
